--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  font-family: 'Source Code Pro', monospace;
+}
+
 /* 
   COLOR PALETE GENERATED FROM
   https://coolors.co/?home
-
 */
 :root {
   /* Color Palette */
@@ -12,4 +23,6 @@
   --alabaster: hsla(52, 17%, 91%, 1);
   --antiflash-white: hsla(210, 13%, 94%, 1);
   --eerie-black: hsla(0, 0%, 11%, 1)
+  
 }
+
