--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+/* Tablet */
+/* @media (max-width: 1024px) {
+
+} */
+
+/* Mobile */
+/* @media (max-width: 640px) {
+
+} */
+
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +32,5 @@ body {
   --onyx: hsla(206, 6%, 25%, 1);
   --alabaster: hsla(52, 17%, 91%, 1);
   --antiflash-white: hsla(210, 13%, 94%, 1);
-  --eerie-black: hsla(0, 0%, 11%, 1)
-  
+  --eerie-black: hsla(0, 0%, 11%, 1) 
 }
-
